# pixelserv

./: .gitignore  ChangeLog  INSTALL  Makefile  Makefile-XC  Makefile.am  README.md  build.sh  certs.c  certs.h  configure.ac  logger.c  logger.h  pixelserv-tls.1  pixelserv.c  socket_handler.c  socket_handler.h  util.c  util.h
debian/: changelog  control  postinst  rules
openssl/: README
openssl/amd64/: .gitignore
openssl/include/: openssl
